# udemy-mcp-mastery-course

./: .env  README.md  main.py  pyproject.toml
section03-build-first-mcp/demo-server/: demo-client.py  demo-fastmcp-client.py  demo-server.py
section03-build-first-mcp/weather/: client.py  server.py
section04-local-agent/: math_server.py  mcp_client_agent.py  mcp_configs.json  weather_server.py
